 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

PIG-3191: [piggybank] MultiStorage output filenames are not sortable (Danny Antonelli via jcoveney)

IMPROVEMENTS

PIG-3192: Better call to action to download Pig in docs (rjurney via jcoveney)

PIG-3167: Job stats are printed incorrectly for map-only jobs (Mark Wagner via jcoveney)

PIG-3169: Remove temporary files that are not needed (Mark Wagner via jcoveney)

PIG-3131: Document PluckTuple UDF (rjurney via jcoveney) 

PIG-3098: Add another test for the self join case (jcoveney)

PIG-3129: Document syntax to refer to previous relation (rjurney via jcoveney)

PIG-2553: Pig shouldn't allow attempts to write multiple relations into same directory (prkommireddi via cheolsoo)

PIG-3179: Task Information Header only prints out the first split for each task (knoguchi via rohini)

PIG-3108: HBaseStorage returns empty maps when mixing wildcard with other columns (christoph.bauer via billgraham)

PIG-3178: Print a stacktrace when ExecutableManager hits an OOM (knoguchi via rohini)

PIG-3160: GFCross uses unnecessary loop (sandyr via cheolsoo)

PIG-3138: Decouple PigServer.executeBatch() from compilation of batch (pkommireddi via cheolsoo)

PIG-2878: Pig current releases lack a UDF equalIgnoreCase.This function returns a Boolean value indicating whether string left is equal to string right. This
check is case insensitive. (shami via gates)

PIG-2994: Grunt shortcuts (prasanth_j via cheolsoo)

PIG-3140: Document PigProgressNotificationListener configs (billgraham)

PIG-3139: Document reducer estimation (billgraham)

PIG-2764: Add a biginteger and bigdecimal type to pig (jcoveney)

PIG-3073: POUserFunc creating log spam for large scripts (jcoveney)
